k8s/db/mongodb-example/mongo-express-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-example-deployment
  labels:
    app: mongo-express-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-example
  template:
    metadata:
      labels:
        app: mongo-express-example
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
          - containerPort: 8081
