k8s/db/mongodb-example/mongodb-example-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-example-statefulset
  labels:
    app: mongodb-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb-example
  serviceName: mongodb-example-service
  template:
    metadata:
      labels:
        app: mongodb-example
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongodb-example-pv-claim
            mountPath: /data/db
        args:
          - '--dbpath'
          - /data/db
        command:
          - mongod
          - '--bind_ip_all'
          - '--replSet'
          - rs0
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mongodb-example-pv-claim
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 3Gi
