k8s/db/mongodb-example/mongo-express-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-example-service
spec:
  selector:
    app: mongo-express-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
