k8s/db/mongodb-example/mongodb-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-example-service
spec:
  selector:
    app: mongodb-example
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
