k8s/db/mongodb-example/mongo-express-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-example-ingress
spec:
  rules:
  - host: mongo-express-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-example-service
            port:
              number: 80
